--- a/Frontend/uber-frontend/package.json
+++ b/Frontend/uber-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "axios": "^1.13.2",
     "D": "^1.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
