--- a/Frontend/uber-frontend/package.json
+++ b/Frontend/uber-frontend/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@gsap/react": "^2.1.2",
     "axios": "^1.13.2",
     "D": "^1.0.0",
+    "gsap": "^3.13.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "remixicon": "^4.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
